--- a/file_move.yml
+++ b/file_move.yml
@@ -3,25 +3,24 @@
   become: true
   become_method: sudo
   tasks:
+    - debug: msg="Moving files to remote_server"
     - copy: src=files/{{item}} dest=/tmp/{{item}}
       with_items:
         - filemove.sh
         - filemove1.sh
 
-    - debug: msg="am going to move a file"
-
-    - name: moving file
-      command: /bin/sh /tmp/filemove.sh
+    - name: moving correct file
+      command: /bin/sh /tmp/filemove1.sh
       register: file_status
 
     - debug: msg="file move status {{file_status.stdout}}"
 
-    - name: moving correct file location
-      command: /bin/sh files/filemove1.sh
+    - name: moving error file location
+      command: /bin/sh files/filemove.sh
       register: file1_status
-      when: file_status.stdout == 1
+      when: file_status.stdout == 0
 
-    - debug: msg="file1 move status {{file1_status.stdout}}"
+    - debug: msg="file1 move status {{file1_status.stdout | default('NA')}}"
 
     - set_stats:
         data:
